# mumble-video

./: CMakeLists.txt  LICENSE  README.md  Receiver.cpp  Receiver.h  StreamHandler.cpp  StreamHandler.h  Streamer.cpp  Streamer.h  plugin.cpp
rtmp-server/: docker-compose.yml  nginx.conf
